[#36267959, #36480899, #36481605, #36483047] 1. fixed issues of line search. 2. filter button formatting similar to export button. 3. background color to record count and filter breadcrumb. 4. fixed ott spacing issues.

--- a/css/intermediary.css
+++ b/css/intermediary.css
@@ -551,10 +551,7 @@ ul, li { behavior:url("css/csshover3.htc"); }
 
 .milestones, .export {
 	float:left;
-	/*margin-right: 10px; */
 	vertical-align:bottom; 
-	/*padding-top:4px; */
-	/*display:block;*/
 	height:20px;
 }
 
@@ -586,23 +583,42 @@ ul, li { behavior:url("css/csshover3.htc"); }
 	height:26px;
 	overflow:auto;
 	float:left;
-	/*border: 1px solid #777;*/
-	padding: 2px;
+	padding: 2px 5px 2px 2px;
 	margin-right: 10px;
+	background-color:#EDEAFF;
 }
 
 #parent {
 	height: 100%;
     width: 100%;
-}
-
-#filter {
-	float:left;
-	margin:2px 10px 0px 0px;
+	margin-bottom: 35px;
 }
 
 #fulltextsearchbox {
 	float:left;
 	margin-right:10px;
 	width:183px;
+}
+
+.advanced {
+	font-weight:bold;
+	float:left;
+	margin-right:10px;
+	padding: 2px;
+	border: 1px solid black;
+	cursor: pointer;
+}
+
+.records {
+	background-color:#EDEAFF;
+	float:left;
+	font-weight: bold;
+	height: 21px;
+	padding: 5px;
+}
+
+#buttons {
+	float:left;
+	margin-right: 10px;
+	margin-top: -2px;
 }
